compiler/parser/src/snapshots/rustpython_parser__context__tests__ann_assign_name.snap
---
source: compiler/parser/src/context.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 1,
        },
        end_location: Location {
            row: 1,
            column: 11,
        },
        custom: (),
        node: AnnAssign {
            target: Located {
                location: Location {
                    row: 1,
                    column: 1,
                },
                end_location: Location {
                    row: 1,
                    column: 2,
                },
                custom: (),
                node: Name {
                    id: "x",
                    ctx: Store,
                },
            },
            annotation: Located {
                location: Location {
                    row: 1,
                    column: 4,
                },
                end_location: Location {
                    row: 1,
                    column: 7,
                },
                custom: (),
                node: Name {
                    id: "int",
                    ctx: Load,
                },
            },
            value: Some(
                Located {
                    location: Location {
                        row: 1,
                        column: 10,
                    },
                    end_location: Location {
                        row: 1,
                        column: 11,
                    },
                    custom: (),
                    node: Constant {
                        value: Int(
                            1,
                        ),
                        kind: None,
                    },
                },
            ),
            simple: 1,
        },
    },
]
