compiler/parser/src/snapshots/rustpython_parser__context__tests__assign_for.snap
---
source: compiler/parser/src/context.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 1,
        },
        custom: (),
        node: For {
            target: Located {
                location: Location {
                    row: 1,
                    column: 5,
                },
                custom: (),
                node: Name {
                    id: "x",
                    ctx: Load,
                },
            },
            iter: Located {
                location: Location {
                    row: 1,
                    column: 11,
                },
                custom: (),
                node: Tuple {
                    elts: [
                        Located {
                            location: Location {
                                row: 1,
                                column: 11,
                            },
                            custom: (),
                            node: Constant {
                                value: Int(
                                    1,
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            location: Location {
                                row: 1,
                                column: 14,
                            },
                            custom: (),
                            node: Constant {
                                value: Int(
                                    2,
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            location: Location {
                                row: 1,
                                column: 17,
                            },
                            custom: (),
                            node: Constant {
                                value: Int(
                                    3,
                                ),
                                kind: None,
                            },
                        },
                    ],
                    ctx: Load,
                },
            },
            body: [
                Located {
                    location: Location {
                        row: 1,
                        column: 21,
                    },
                    custom: (),
                    node: Pass,
                },
            ],
            orelse: [],
            type_comment: None,
        },
    },
]
