compiler/parser/src/snapshots/rustpython_parser__context__tests__assign_named_expr.snap
---
source: compiler/parser/src/context.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 1,
        },
        custom: (),
        node: If {
            test: Located {
                location: Location {
                    row: 1,
                    column: 4,
                },
                custom: (),
                node: NamedExpr {
                    target: Located {
                        location: Location {
                            row: 1,
                            column: 4,
                        },
                        custom: (),
                        node: Name {
                            id: "x",
                            ctx: Store,
                        },
                    },
                    value: Located {
                        location: Location {
                            row: 1,
                            column: 8,
                        },
                        custom: (),
                        node: Constant {
                            value: Int(
                                1,
                            ),
                            kind: None,
                        },
                    },
                },
            },
            body: [
                Located {
                    location: Location {
                        row: 1,
                        column: 11,
                    },
                    custom: (),
                    node: Pass,
                },
            ],
            orelse: [],
        },
    },
]
