compiler/parser/src/snapshots/rustpython_parser__context__tests__assign_set_comp.snap
---
source: compiler/parser/src/context.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 1,
        },
        end_location: Location {
            row: 1,
            column: 27,
        },
        custom: (),
        node: Assign {
            targets: [
                Located {
                    location: Location {
                        row: 1,
                        column: 1,
                    },
                    end_location: Location {
                        row: 1,
                        column: 2,
                    },
                    custom: (),
                    node: Name {
                        id: "x",
                        ctx: Store,
                    },
                },
            ],
            value: Located {
                location: Location {
                    row: 1,
                    column: 5,
                },
                end_location: Location {
                    row: 1,
                    column: 27,
                },
                custom: (),
                node: SetComp {
                    elt: Located {
                        location: Location {
                            row: 1,
                            column: 6,
                        },
                        end_location: Location {
                            row: 1,
                            column: 7,
                        },
                        custom: (),
                        node: Name {
                            id: "y",
                            ctx: Load,
                        },
                    },
                    generators: [
                        Comprehension {
                            target: Located {
                                location: Location {
                                    row: 1,
                                    column: 12,
                                },
                                end_location: Location {
                                    row: 1,
                                    column: 13,
                                },
                                custom: (),
                                node: Name {
                                    id: "y",
                                    ctx: Store,
                                },
                            },
                            iter: Located {
                                location: Location {
                                    row: 1,
                                    column: 18,
                                },
                                end_location: Location {
                                    row: 1,
                                    column: 25,
                                },
                                custom: (),
                                node: Tuple {
                                    elts: [
                                        Located {
                                            location: Location {
                                                row: 1,
                                                column: 18,
                                            },
                                            end_location: Location {
                                                row: 1,
                                                column: 19,
                                            },
                                            custom: (),
                                            node: Constant {
                                                value: Int(
                                                    1,
                                                ),
                                                kind: None,
                                            },
                                        },
                                        Located {
                                            location: Location {
                                                row: 1,
                                                column: 21,
                                            },
                                            end_location: Location {
                                                row: 1,
                                                column: 22,
                                            },
                                            custom: (),
                                            node: Constant {
                                                value: Int(
                                                    2,
                                                ),
                                                kind: None,
                                            },
                                        },
                                        Located {
                                            location: Location {
                                                row: 1,
                                                column: 24,
                                            },
                                            end_location: Location {
                                                row: 1,
                                                column: 25,
                                            },
                                            custom: (),
                                            node: Constant {
                                                value: Int(
                                                    3,
                                                ),
                                                kind: None,
                                            },
                                        },
                                    ],
                                    ctx: Load,
                                },
                            },
                            ifs: [],
                            is_async: 0,
                        },
                    ],
                },
            },
            type_comment: None,
        },
    },
]
