compiler/parser/src/snapshots/rustpython_parser__context__tests__assign_starred.snap
---
source: compiler/parser/src/context.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 1,
        },
        custom: (),
        node: Assign {
            targets: [
                Located {
                    location: Location {
                        row: 1,
                        column: 2,
                    },
                    custom: (),
                    node: Tuple {
                        elts: [
                            Located {
                                location: Location {
                                    row: 1,
                                    column: 2,
                                },
                                custom: (),
                                node: Name {
                                    id: "x",
                                    ctx: Store,
                                },
                            },
                            Located {
                                location: Location {
                                    row: 1,
                                    column: 5,
                                },
                                custom: (),
                                node: Starred {
                                    value: Located {
                                        location: Location {
                                            row: 1,
                                            column: 6,
                                        },
                                        custom: (),
                                        node: Name {
                                            id: "y",
                                            ctx: Store,
                                        },
                                    },
                                    ctx: Store,
                                },
                            },
                        ],
                        ctx: Store,
                    },
                },
            ],
            value: Located {
                location: Location {
                    row: 1,
                    column: 12,
                },
                custom: (),
                node: Tuple {
                    elts: [
                        Located {
                            location: Location {
                                row: 1,
                                column: 12,
                            },
                            custom: (),
                            node: Constant {
                                value: Int(
                                    1,
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            location: Location {
                                row: 1,
                                column: 15,
                            },
                            custom: (),
                            node: Constant {
                                value: Int(
                                    2,
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            location: Location {
                                row: 1,
                                column: 18,
                            },
                            custom: (),
                            node: Constant {
                                value: Int(
                                    3,
                                ),
                                kind: None,
                            },
                        },
                    ],
                    ctx: Load,
                },
            },
            type_comment: None,
        },
    },
]
